--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "data.json",
+    "name": "dataa.json",
     "version": "2.2.2",
     "author": "Mohammad Sakib Mahmood<sakibmahmood485@gmail.com> ",
     "description": "A personal card for the web", 
